--- a/home.html
+++ b/home.html
@@ -56,13 +56,13 @@
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
                         Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="proizvodstvo.html" aria-expanded="false">Производство <br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br>о продукции</a></li>
-                <li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false"><br>Получить<br> доступ<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
+                <li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false"><br>Регистрация&nbsp;<br>в Компании<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="регистрация.html" target="_blank">Команда Alfa-team</a></h5>
+                <h5 class="pb-3"><a href="https://office.agenyz.com/?bonus=007-432703" target="_blank">Приглашаем в нашу&nbsp;Команду</a><br><a href="https://office.agenyz.com/?bonus=007-432703" target="_blank"> Alfa-team</a></h5>
                 <p class="mbr-text">Сайт Виталия Ващенко&nbsp;<br>и Ирины Приходько</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
