--- a/О деньгах.html
+++ b/О деньгах.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-7" href="https://agenyz.github.io/">
+                    <a class="nav-link link text-white display-7" href="github.io.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
 
     
 
