--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
